--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,9 +1,3 @@
-"Transaction cancelled by user","Transaction cancelled by user"
-"Error with bank transaction process","Error with bank transaction process"
-"Error with transaction process","Error with transaction process"
-"Error with 3DSecure process","Error with 3DSecure process"
-"Error with payment validation rules","Error with payment validation rules"
-"Error when processing payment","Error when processing payment"
 Configure,Configure
 Close,Close
 "You must define the notification URL into your point of sale configuration. %s The notification URL is: %s %s %s","You must define the notification URL into your point of sale configuration. %s The notification URL is: %s %s %s"
@@ -86,7 +80,8 @@ Monthly,Monthly
 "Cart with items","Cart with items"
 "Orders history","Orders history"
 "When Shipment is created","When Shipment is created"
-"When order status is '%1'","When order status is '%1'"
+"When invoice is created","When invoice is created"
+"When order status is ""%1""","When order status is ""%1"""
 "No contracts available.","No contracts available."
 "No costs","No costs"
 Fixed,Fixed
@@ -128,7 +123,6 @@ Italian,Italian
 German,German
 Flemish,Flemish
 Finn,Finn
-"When order status is ""%1""","When order status is ""%1"""
 No,No
 "Back to the shop","Back to the shop"
 "Due day","Due day"
